matchers: contains highlight closest match (#1534)